[gd_scene load_steps=30 format=2]

[ext_resource path="res://board/Board.gd" type="Script" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]
[ext_resource path="res://board/Grid.gd" type="Script" id=3]
[ext_resource path="res://board/Pusher.gd" type="Script" id=4]
[ext_resource path="res://board/BoardUI.gd" type="Script" id=5]
[ext_resource path="res://assets/ui/clock.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/sword.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/yellow_bar_progress_big.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/big_bar_progress_bg.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/arrow_right.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/gun.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/spear.png" type="Texture" id=12]
[ext_resource path="res://board/PincerExecutor.gd" type="Script" id=13]
[ext_resource path="res://board/Pincerer.gd" type="Script" id=14]
[ext_resource path="res://assets/ui/grid.png" type="Texture" id=15]
[ext_resource path="res://board/Trail2D.tscn" type="PackedScene" id=16]
[ext_resource path="res://ui/DefeatScreen.tscn" type="PackedScene" id=17]
[ext_resource path="res://board/Cell.tscn" type="PackedScene" id=18]
[ext_resource path="res://board/Attacker.tscn" type="PackedScene" id=19]
[ext_resource path="res://units/Unit.tscn" type="PackedScene" id=20]
[ext_resource path="res://ui/VictoryScreen.tscn" type="PackedScene" id=21]
[ext_resource path="res://ui/DragModeOptionButton.tscn" type="PackedScene" id=22]
[ext_resource path="res://assets/city_bg.png" type="Texture" id=23]
[ext_resource path="res://assets/music/Unlocated_Hell.mp3" type="AudioStream" id=24]
[ext_resource path="res://assets/ui/bright_red_panel_transparent.png" type="Texture" id=25]
[ext_resource path="res://board/ChainPreviewer.gd" type="Script" id=27]
[ext_resource path="res://board/ChainPreviewLine2D.tscn" type="PackedScene" id=28]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 324, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 399 )

[node name="BoardUI" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 720.0
margin_bottom = 960.0
mouse_filter = 2
color = Color( 0.207843, 0.0313726, 0.164706, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 720.0
margin_bottom = 960.0
mouse_filter = 2
texture = ExtResource( 23 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_right = 720.0
margin_bottom = 960.0
mouse_filter = 2
color = Color( 0.207843, 0.0313726, 0.164706, 0.752941 )
__meta__ = {
"_edit_lock_": true
}

[node name="Board" type="Node2D" parent="."]
position = Vector2( 59, 128 )
script = ExtResource( 1 )
trail_2d_packed_scene = ExtResource( 16 )

[node name="Grid" type="Node2D" parent="Board"]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}
cell_packed_scene = ExtResource( 18 )

[node name="Sprite" type="Sprite" parent="Board/Grid"]
texture = ExtResource( 15 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Cells" type="Node2D" parent="Board/Grid"]
__meta__ = {
"_edit_lock_": true
}

[node name="Pincerer" type="Node" parent="Board"]
script = ExtResource( 14 )

[node name="Pusher" type="Node" parent="Board"]
script = ExtResource( 4 )

[node name="DragTimer" type="Timer" parent="Board"]
wait_time = 4.0
one_shot = true

[node name="UpperBounds" type="StaticBody2D" parent="Board"]
position = Vector2( 301, -8 )
collision_mask = 0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Board/UpperBounds"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="LowerBounds" type="StaticBody2D" parent="Board"]
position = Vector2( 301, 810 )
collision_mask = 0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Board/LowerBounds"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="RightBounds" type="StaticBody2D" parent="Board"]
position = Vector2( 614, 401 )
collision_mask = 0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Board/RightBounds"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="LeftBounds" type="StaticBody2D" parent="Board"]
position = Vector2( -12, 401 )
collision_mask = 0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Board/LeftBounds"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Traps" type="Node2D" parent="Board"]
z_index = 1
__meta__ = {
"_edit_lock_": true
}

[node name="ChainPreviewer" type="Node2D" parent="Board"]
z_index = 1
script = ExtResource( 27 )
chain_preview_line_2d_packed_scene = ExtResource( 28 )

[node name="Trails" type="Node2D" parent="Board"]

[node name="EnemyPhases" type="Node2D" parent="Board"]
__meta__ = {
"_edit_lock_": true
}

[node name="Phase1" type="Node2D" parent="Board/EnemyPhases"]
z_index = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Phase2" type="Node2D" parent="Board/EnemyPhases"]
z_index = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Phase3" type="Node2D" parent="Board/EnemyPhases"]
visible = false
z_index = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Phase4" type="Node2D" parent="Board/EnemyPhases"]
z_index = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Phase5" type="Node2D" parent="Board/EnemyPhases"]
z_index = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Units" type="Node2D" parent="Board"]
z_index = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Unit" parent="Board/Units" instance=ExtResource( 20 )]
position = Vector2( 251, 456 )

[node name="Unit2" parent="Board/Units" instance=ExtResource( 20 )]
position = Vector2( 354, 455 )

[node name="Unit3" parent="Board/Units" instance=ExtResource( 20 )]
position = Vector2( 453, 552 )

[node name="Unit4" parent="Board/Units" instance=ExtResource( 20 )]
position = Vector2( 149, 549 )

[node name="Unit5" parent="Board/Units" instance=ExtResource( 20 )]
position = Vector2( 156, 648 )

[node name="Unit6" parent="Board/Units" instance=ExtResource( 20 )]
position = Vector2( 449, 649 )

[node name="DebugUnits" type="Node2D" parent="Board"]
visible = false
z_index = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Attacker" parent="Board" instance=ExtResource( 19 )]
z_index = 1
__meta__ = {
"_edit_lock_": true
}

[node name="PincerExecutor" type="Node2D" parent="Board"]
z_index = 1
script = ExtResource( 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="SkillActivationTimer" type="Timer" parent="Board/PincerExecutor"]
wait_time = 0.25

[node name="DeathAnimationTimer" type="Timer" parent="Board/PincerExecutor"]
wait_time = 0.5

[node name="Tween" type="Tween" parent="Board"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
margin_right = 720.0
margin_bottom = 120.0
mouse_filter = 2
size_flags_vertical = 0
theme = ExtResource( 2 )
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 700.0
margin_bottom = 100.0
custom_constants/separation = 16
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/HBoxContainer"]
margin_right = 348.0
margin_bottom = 80.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 348.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 6 )
expand = true

[node name="TextureProgress" type="TextureProgress" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 40.0
margin_top = 8.0
margin_right = 240.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 6
value = 50.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 8 )
nine_patch_stretch = true
stretch_margin_left = 10
stretch_margin_top = 8
stretch_margin_right = 10
stretch_margin_bottom = 8

[node name="Tween" type="Tween" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2/TextureProgress"]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 348.0
margin_bottom = 72.0
custom_constants/separation = -4

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_top = 1.0
margin_right = 200.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 0 )
text = "Battle 1/ 5"

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 7 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 28.0
margin_right = 60.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 10 )
expand = true

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 56.0
margin_right = 88.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 11 )
expand = true

[node name="TextureRect4" type="TextureRect" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 84.0
margin_right = 116.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 10 )
expand = true

[node name="TextureRect5" type="TextureRect" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 112.0
margin_right = 144.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 12 )
expand = true

[node name="TextureRect6" type="TextureRect" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 140.0
margin_right = 172.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 10 )
expand = true

[node name="TextureRect7" type="TextureRect" parent="CanvasLayer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 168.0
margin_right = 200.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 7 )
expand = true

[node name="DragModeOptionButton" parent="CanvasLayer/MarginContainer/HBoxContainer" instance=ExtResource( 22 )]
margin_left = 364.0
margin_right = 564.0

[node name="GiveUpButton" type="Button" parent="CanvasLayer/MarginContainer/HBoxContainer"]
margin_left = 580.0
margin_right = 680.0
margin_bottom = 80.0
text = "GIVE_UP"

[node name="EnemyPhaseCenterContainer" type="CenterContainer" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/EnemyPhaseCenterContainer"]
margin_left = 200.0
margin_top = 448.0
margin_right = 520.0
margin_bottom = 512.0
rect_min_size = Vector2( 320, 64 )
texture = ExtResource( 25 )
patch_margin_left = 26
patch_margin_top = 29
patch_margin_right = 27
patch_margin_bottom = 19

[node name="Label" type="Label" parent="CanvasLayer/EnemyPhaseCenterContainer/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
text = "BATTLE 1/5"
align = 1
valign = 1

[node name="DefeatScreen" parent="CanvasLayer" instance=ExtResource( 17 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 720.0
margin_bottom = 960.0
__meta__ = {
"_edit_lock_": true
}

[node name="VictoryScreen" parent="CanvasLayer" instance=ExtResource( 21 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 720.0
margin_bottom = 960.0
__meta__ = {
"_edit_lock_": true
}

[node name="BattleTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )
volume_db = 1.0
bus = "Music"

[connection signal="defeat" from="Board" to="." method="_on_Board_defeat"]
[connection signal="drag_timer_reset" from="Board" to="." method="_on_Board_drag_timer_reset"]
[connection signal="drag_timer_started" from="Board" to="." method="_on_Board_drag_timer_started"]
[connection signal="drag_timer_stopped" from="Board" to="." method="_on_Board_drag_timer_stopped"]
[connection signal="enemies_appeared" from="Board" to="." method="_on_Board_enemies_appeared"]
[connection signal="enemy_phase_started" from="Board" to="." method="_on_Board_enemy_phase_started"]
[connection signal="player_turn_started" from="Board" to="." method="_on_Board_player_turn_started"]
[connection signal="tree_exiting" from="Board" to="Board" method="_on_Board_tree_exiting"]
[connection signal="victory" from="Board" to="." method="_on_Board_victory"]
[connection signal="timeout" from="Board/DragTimer" to="Board" method="_on_DragTimer_timeout"]
[connection signal="pincer_executed" from="Board/PincerExecutor" to="Board" method="_on_PincerExecutor_pincer_executed"]
[connection signal="tree_exiting" from="Board/PincerExecutor" to="Board/PincerExecutor" method="_on_PincerExecutor_tree_exiting"]
[connection signal="timeout" from="Board/PincerExecutor/SkillActivationTimer" to="Board/PincerExecutor" method="_on_SkillActivationTimer_timeout"]
[connection signal="timeout" from="Board/PincerExecutor/DeathAnimationTimer" to="Board/PincerExecutor" method="_on_DeathAnimationTimer_timeout"]
[connection signal="drag_mode_changed" from="CanvasLayer/MarginContainer/HBoxContainer/DragModeOptionButton" to="." method="_on_DragModeOptionButton_drag_mode_changed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/HBoxContainer/GiveUpButton" to="." method="_on_GiveUpButton_pressed"]
[connection signal="quit_button_pressed" from="CanvasLayer/DefeatScreen" to="." method="_on_DefeatScreen_quit_button_pressed"]
[connection signal="try_again_button_pressed" from="CanvasLayer/DefeatScreen" to="." method="_on_DefeatScreen_try_again_button_pressed"]
[connection signal="continue_button_pressed" from="CanvasLayer/VictoryScreen" to="." method="_on_VictoryScreen_continue_button_pressed"]
